[workspace.package]
version = "0.15.0"
authors = ["Victor M. Alvarez <vmalvarez@virustotal.com>"]
edition = "2021"
homepage = "https://virustotal.github.io/yara-x"
repository = "https://github.com/VirusTotal/yara-x"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["pattern-matching", "cybersecurity", "forensics", "malware", "yara"]

# When updating rust-version also update MSRV in:
#   .github/workflows/tests.yaml
#   .github/workflows/code_health.yaml
#
rust-version = "1.85.0"

[workspace]
members = [
    "lib",
    "capi",
    "cli",
    "fmt",
    "macros",
    "parser",
    "proto",
    "proto-json",
    "proto-yaml",
    "py",
]
resolver = "2"


[workspace.dependencies]
aho-corasick = "1.1.3"
annotate-snippets = "0.11.5"
anyhow = "1.0.97"
array-bytes = "8.0.0"
ascii_tree = "0.1.1"
base64 = "0.22.1"
bincode = "2.0.0"
bitflags = "2.8.0"
bitvec = "1.0.1"
bstr = "1.11.3"
cbindgen = "0.29.0"
chrono = "0.4.40"
clap = "4.5.34"
clap_complete = "4.5.47"
const-oid = "0.9.6"
crc32fast = "1.4.2"
der-parser = "10.0.0"
digest = "0.10.7"
dsa = "0.6.3"
ecdsa = "0.16.9"
enable-ansi-support = "0.2.1"
env_logger = "0.11.7"
figment = "0.10.19"
globwalk = "0.9.1"
goldenfile = "1.8.0"
home = "0.5.11"
ihex = "3.0.0"
indexmap = "2.8.0"
intaglio = "1.10.0"
ipnet = "2.11.0"
itertools = "0.14.0"
linkme = "0.3.32"
log = "0.4.27"
magic = "0.16.2"
md2 = "0.10.2"
md-5 = "0.10.6"
memmap2 = "0.9.5"
memchr = "2.7.4"
memx = "0.1.32"
nom = "8.0.0"
num-traits = "0.2.19"
num-derive = "0.4.2"
p256 = "0.13.2"
p384 = "0.13.0"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
protobuf = "3.7.2"
protobuf-codegen = "3.7.2"
protobuf-parse = "3.7.2"
psl = "2.1.105"
quanta = "0.12.5"
rayon = "1.10.0"
regex = "1.11.1"
regex-syntax = "0.8.5"
regex-automata = "0.4.9"
roxmltree = "0.20.0"
rsa = "0.9.8"
rustc-hash = "2.1.1"
serde = "1.0.219"
serde_json = "1.0.140"
sha1 = "0.10.6"
sha2 = "0.10.8"
smallvec = "1.14.0"
strum = "0.27.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
# Using tlsh-fixed instead of tlsh because tlsh-fixed includes a fix for this
# issue: https://github.com/1crcbl/tlsh-rs/issues/2.
tlsh-fixed = "0.1.1"
uuid = "1.16.0"
walrus = "0.23.3"
wasmtime = { version = "32.0.0", default-features = false }
x509-parser = "0.17.0"
yansi = "1.0.1"
yara-x = { path = "lib", version = "0.15.0" }
yara-x-fmt = { path = "fmt", version = "0.15.0" }
yara-x-macros = { path = "macros", version = "0.15.0" }
yara-x-parser = { path = "parser", version = "0.15.0" }
yara-x-proto = { path = "proto", version = "0.15.0" }
yara-x-proto-yaml = { path = "proto-yaml", version = "0.15.0" }
yara-x-proto-json = { path = "proto-json", version = "0.15.0" }
zip = "3.0.0"

# Special profile that builds a release binary with link-time optimization.
# Compiling with this profile takes a while, but the resulting binary is
# smaller and better optimized. For building with this profile use:
#
# cargo build --profile release-lto
[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1
