[workspace.package]
version = "1.10.0"
authors = ["Victor M. Alvarez <vmalvarez@virustotal.com>"]
edition = "2021"
homepage = "https://virustotal.github.io/yara-x"
repository = "https://github.com/VirusTotal/yara-x"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["pattern-matching", "cybersecurity", "forensics", "malware", "yara"]

# When updating rust-version also update MSRV in:
#   .github/workflows/tests.yaml
#   .github/workflows/code_health.yaml
#
rust-version = "1.88.0"

[workspace]
members = [
    "lib",
    "capi",
    "cli",
    "fmt",
    "macros",
    "parser",
    "proto",
    "proto-json",
    "proto-yaml",
    "py",
    "ls",
]
resolver = "2"


[workspace.dependencies]
aho-corasick = "1.1.4"
annotate-snippets = "0.12.8"
anyhow = "1.0.100"
array-bytes = "9.3.0"
ascii_tree = "0.1.1"
base64 = "0.22.1"
bincode = "2.0.1"
bitflags = "2.10.0"
bitvec = "1.0.1"
bstr = "1.12.1"
cbindgen = "0.29.2"
chrono = "0.4.42"
clap = "4.5.51"
clap_complete = "4.5.60"
const-oid = "0.9.6"
crc32fast = "1.5.0"
der-parser = "10.0.0"
digest = "0.10.7"
dsa = "0.6.3"
ecdsa = "0.16.9"
enable-ansi-support = "0.3.1"
env_logger = "0.11.8"
figment = "0.10.19"
globwalk = "0.9.1"
goldenfile = "1.9.1"
home = "0.5.12"
ihex = "3.0.0"
indexmap = "2.12.0"
intaglio = "1.11.0"
inventory = "0.3.21"
ipnet = "2.11.0"
itertools = "0.14.0"
linkme = "0.3.35"
log = "0.4.28"
magic = "0.16.7"
md2 = "0.10.2"
md-5 = "0.10.6"
memmap2 = "0.9.9"
memchr = "2.7.6"
nom = "8.0.0"
num-traits = "0.2.19"
num-derive = "0.4.2"
p256 = "0.13.2"
p384 = "0.13.1"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
protobuf = "3.7.2"
protobuf-codegen = "3.7.2"
protobuf-parse = "3.7.2"
psl = "2.1.157"
quanta = "0.12.6"
rayon = "1.11.0"
regex = "1.12.2"
regex-syntax = "0.8.8"
regex-automata = "0.4.13"
roxmltree = "0.21.1"
rsa = "0.9.10"
rustc-hash = "2.1.1"
serde = "1.0.228"
serde_json = "1.0.145"
sha1 = "0.10.6"
sha2 = "0.10.6"
smallvec = "1.14.0"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.17"
uuid = "1.18.1"
walrus = "0.24.3"
wasmtime = { version = "38.0.4", default-features = false }
x509-parser = "0.18.0"
yansi = "1.0.1"
yara-x = { path = "lib", version = "1.10.0", default-features = false }
yara-x-fmt = { path = "fmt", version = "1.10.0" }
yara-x-macros = { path = "macros", version = "1.10.0" }
yara-x-parser = { path = "parser", version = "1.10.0" }
yara-x-proto = { path = "proto", version = "1.10.0"}
yara-x-proto-yaml = { path = "proto-yaml", version = "1.10.0" }
yara-x-proto-json = { path = "proto-json", version = "1.10.0" }
yara-x-ls = { path = "ls", version = "1.10.0" }
zip = "6.0.0"
simd-adler32 = "0.3.7"
simd_cesu8 = "1"
assert-call = "0.1.2"

# Special profile that builds a release binary with link-time optimization.
# Compiling with this profile takes a while, but the resulting binary is
# smaller and better optimized. For building with this profile use:
#
# cargo build --profile release-lto
[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1

# Enable optimizations even for debug releases of yara-x-parser. This is necessary
# because the `logos` lexer produces recursive functions and rely on the rustc's
# tail-recursion elimination. In debug releases these optimizations are disabled
# and the produced code is actually recursive, which produces stack overflows
# with very large inputs.
# See: https://github.com/VirusTotal/yara-x/issues/441
[profile.dev.package.yara-x-parser]
opt-level = 1
