[workspace.package]
version = "1.15.0"
authors = ["Victor M. Alvarez <vmalvarez@virustotal.com>"]
edition = "2024"
homepage = "https://virustotal.github.io/yara-x"
repository = "https://github.com/VirusTotal/yara-x"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["pattern-matching", "cybersecurity", "forensics", "malware", "yara"]

# When updating rust-version also update MSRV in:
#   .github/workflows/tests.yaml
#
rust-version = "1.91.0"

[workspace]
members = [
    "lib",
    "capi",
    "cli",
    "fmt",
    "js-wasm",
    "macros",
    "parser",
    "proto",
    "proto-json",
    "proto-yaml",
    "py",
    "ls",
]
resolver = "3"


[workspace.dependencies]
# aho-corasick = "1.1.4"
daachorse = { git = "https://github.com/plusvic/daachorse" }
annotate-snippets = "0.12.15"
anyhow = "1.0.102"
hex = "0.4.3"
ascii_tree = "0.1.1"
base64 = "0.22.1"
bincode = "2.0.1"
bitflags = "2.11.0"
bitvec = "1.0.1"
bstr = "1.12.1"
cbindgen = "0.29.2"
chrono = "0.4.44"
clap = "4.6.0"
clap_complete = "4.6.0"
const-oid = "0.9.6"
crc32fast = "1.5.0"
der-parser = "10.0.0"
digest = "0.10.7"
dsa = "0.6.3"
ecdsa = "0.16.9"
enable-ansi-support = "0.3.1"
env_logger = "0.11.9"
figment = "0.10.19"
globwalk = "0.9.1"
goldenfile = "1.11.0"
getrandom = "0.2.17"
home = "0.5.12"
ihex = "3.0.0"
indexmap = "2.14.0"
intaglio = "1.13.3"
inventory = "0.3.24"
ipnet = "2.12.0"
itertools = "0.14.0"
js-sys = "0.3.94"
linkme = "0.3.35"
log = "0.4.29"
magic = "0.16.7"
md2 = "0.10.2"
md-5 = "0.10.6"
memmap2 = "0.9.9"
memchr = "2.8.0"
nom = "8.0.0"
num-traits = "0.2.19"
num-derive = "0.4.2"
p256 = "0.13.2"
p384 = "0.13.1"
predicates = "3.1.4"
pretty_assertions = "1.4.1"
protobuf = "3.7.2"
protobuf-codegen = "3.7.2"
protobuf-parse = "3.7.2"
psl = "2.1.202"
quanta = "0.12.6"
rayon = "1.11.0"
regex = "1.12.3"
regex-syntax = "0.8.10"
regex-automata = "0.4.14"
roxmltree = "0.21.1"
rsa = "0.9.10"
rustc-hash = "2.1.1"
serde = "1.0.228"
serde_json = "1.0.149"
serde-wasm-bindgen = "0.6.5"
sha1 = "0.10.6"
sha2 = "0.10.6"
smallvec = "1.14.0"
strum = "0.28.0"
strum_macros = "0.28.0"
thiserror = "2.0.18"
uuid = "1.18.1"
walrus = "0.26.1"
wasm-bindgen = "0.2.117"
wasm-bindgen-test = "0.3.67"
wasm-opt = "0.116.1"
wasmtime = { version = "43.0.1", default-features = false }
x509-parser = "0.18.0"
yansi = "1.0.1"
yara-x = { path = "lib", version = "1.15.0" }
yara-x-fmt = { path = "fmt", version = "1.15.0" }
yara-x-macros = { path = "macros", version = "1.15.0" }
yara-x-parser = { path = "parser", version = "1.15.0" }
yara-x-proto = { path = "proto", version = "1.15.0"}
yara-x-proto-yaml = { path = "proto-yaml", version = "1.15.0" }
yara-x-proto-json = { path = "proto-json", version = "1.15.0" }
zip = { version = "8.2.0", default-features = false }
simd-adler32 = "0.3.8"
simd_cesu8 = "1.1.1"
assert-call = "0.1.2"

# Special profile that builds a release binary with link-time optimization.
# Compiling with this profile takes a while, but the resulting binary is
# smaller and better optimized. For building with this profile use:
#
# cargo build --profile release-lto
[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1

# Special profile used when building for WASM. Optimizations must be enabled
# because otherwise the WASM file produced is too large and parsing it fails
# with: "too many locals: locals exceed maximum".
[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.wasm-release-lto]
inherits = "release"
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"

# Enable optimizations even for debug releases of yara-x-parser. This is necessary
# because the `logos` lexer produces recursive functions and rely on the rustc's
# tail-recursion elimination. In debug releases these optimizations are disabled
# and the produced code is actually recursive, which produces stack overflows
# with very large inputs.
# See: https://github.com/VirusTotal/yara-x/issues/441
[profile.dev.package.yara-x-parser]
opt-level = 1
