[package]
name = "yara-x-capi"
description = """
A C API for the YARA-X library.
"""
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true

[features]
# The `capi` feature is required by `cargo-c`.
default = ["capi"]

capi = []
magic-module = ["yara-x/magic-module"]

[lib]
name = "yara_x_capi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
yara-x = { workspace = true }

[build-dependencies]
cbindgen = { workspace = true }


# This section is used by `cargo-c` for generating the header and library
# files. Use:
#
# cargo cbuild --package yara-x-capi
#
[package.metadata.capi.header]
# Name of the header file, without the `.h` extension.
name = "yara_x"
# Install the header into a subdirectory with the name of the crate. This
# is enabled by default, pass `false` or "" to disable it.
subdirectory = ""
# Generate the header file with `cbindgen`.
generation = true


# This section is used by `cargo-deb` for generating a .deb file that installs
# the C library in Debian systems. For generating the .deb file use:
#
# cargo deb --package yara-x-capi --cargo-build cbuild
#
# The .deb file will pput under target/debian.
[package.metadata.deb]
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    [
        "../target/x86_64-unknown-linux-gnu/release/yara_x.h",
        "usr/local/include/yara_x.h",
        "644",
    ],
    [
        "../target/x86_64-unknown-linux-gnu/release/libyara_x_capi.so",
        "usr/local/lib/libyara_x_capi.so",
        "755",
    ],
    [
        "../target/x86_64-unknown-linux-gnu/release/yara_x_capi.pc",
        "usr/local/lib/pkgconfig/yara_x_capi.pc",
        "644",
    ],
]
