[package]
name = "yara-x-fmt"
description = """
A code-formatting library for YARA rules.
"""
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
bitmask = { workspace = true }
bstr = { workspace = true }
lazy_static = { workspace = true }
thiserror = { workspace = true }
yara-x-parser = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
pretty_assertions = { workspace = true }