[package]
name = "yara-x-fmt"
description = """
A code-formatting library for YARA rules.
"""
version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
bitflags = { workspace = true }
bstr = { workspace = true }
thiserror = { workspace = true }
yara-x-parser = { workspace = true }

[dev-dependencies]
globwalk = { workspace = true }
goldenfile = { workspace = true }
pretty_assertions = { workspace = true }
rayon = { workspace = true }
